# Tesla-Live

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CURSOR_BUILD_PROMPT.md  README.md  dashcam-architecture-update.md  dashcam-tesla-final-architecture.md
.githooks/: pre-commit
.github/workflows/: cursor-rules-sync.yml  security.yml  snap-build.yml
cloudflare/: biome.json  package.json  tsconfig.json  wrangler.toml
cloudflare/src/: index.ts
cloudflare/src/db/: schema.sql
cloudflare/src/durable-objects/: dashboard.ts
cloudflare/src/routes/: alerts.ts  (+5 more)
dashboard-web/: package.json
dashboard-web/src/: App.tsx
docs/: ai-camera-strategy-alignment.md
pi/: config.yaml  main.py  pyproject.toml  requirements.txt
pi/core/: __init__.py  camera.py  config.py  detector.py  face_recognition.py  gps.py  masking.py  plate_ocr.py  state.py  teslacam.py  types.py
pi/scripts/: download_models.sh  install_service.sh  setup_gadget.sh  setup_hailo.sh
pi/services/: __init__.py  alert_service.py  audio_service.py  clip_service.py  rego_service.py  sync_service.py  upload_service.py
pi/snap/: snapcraft.yaml
pi/tests/: test_detector.py  test_face_recognition.py  test_masking.py  test_plate_ocr.py  test_teslacam.py
pi/ui/: __init__.py  app.py  dashboard.kv
pi/ui/screens/: __init__.py  alerts_screen.py  detections_screen.py  face_enroll_screen.py  face_manage_screen.py  main_screen.py
pi/ui/widgets/: __init__.py  alert_card.py  camera_preview.py  detection_card.py  stat_card.py  status_bar.py
scripts/: deploy-cloudflare.sh  deploy-pi.sh  install-git-hooks.sh
(+7 files in other folders)
