[tool.poetry]
name = "tesla-dashcam-pi"
version = "0.1.0"
description = "Tesla Dashcam AI - Raspberry Pi Application"
authors = ["Your Name"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
kivy = "^2.3.0"
opencv-python-headless = "^4.11.0"
numpy = "^1.26.0"
aiohttp = "^3.9.0"
aiofiles = "^23.2.0"
pyyaml = "^6.0.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
gpsd-py3 = "^0.3.0"
smbus2 = "^0.4.0"
pillow = "^10.0.0"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
black = "^23.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG",
    "SIM",
    "TCH",
    "PTH",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["core", "services", "ui"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
